--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "dotenv": "^16.0.3",
-    "mongoose": "^6.9.0",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  }
+    "name": "my-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@next/font": "13.1.6",
+        "@types/node": "18.11.18",
+        "@types/react": "18.0.27",
+        "@types/react-dom": "18.0.10",
+        "bcrypt": "^5.1.0",
+        "dotenv": "^16.0.3",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^6.9.0",
+        "mongoose-unique-validator": "^3.1.0",
+        "next": "13.1.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "4.9.5"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.1",
+        "@types/mongoose-unique-validator": "^1.0.6"
+    }
 }
